--- a/views/includes/aboutus_sections/download.ejs
+++ b/views/includes/aboutus_sections/download.ejs
@@ -1,13 +1,13 @@
 <div class="download">
     <div class="container big">
         <div class="wrap">
-            <img src="/images/leagues/tapin.png" class="tapin">
+            <img src="/images/leagues/tapin-white-logo.png" class="tapin">
             <div class="content">
                 <p class="title bold">Download TapIn League Management App</p>
                 <div class="app">
                     <img src="/images/icons/tapin-icon.png" class="app-logo">
                     <div class="words">
-                        <p class="white-text">Tapin Mobile Solutions</p>
+                        <p class="white-text bold">Tapin Mobile Solutions</p>
                         <div class="available">
                             <p class="white-text">Available on: </p>
                             <img src="/images/icons/android.png" class="android">
