--- a/views/includes/aboutus_sections/header.ejs
+++ b/views/includes/aboutus_sections/header.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col s12 l6 content">
                 <h3>About Us</h3>
-                <p><%- include('../content/mission_statement'); %></p>
+                <p class="grey-text text-darken-3"><%- include('../content/mission_statement'); %></p>
             </div>
             <div class="col s6 image hide-on-med-and-down">
                 <img class="twoPhones" src="/images/phones/2phones.png">
