--- a/views/includes/aboutus_sections/ourStory.ejs
+++ b/views/includes/aboutus_sections/ourStory.ejs
@@ -1,12 +1,12 @@
 <div class="ourStory">
     <div class="container">
-        <h4 class="primaryGreen bold">Our Story</h4>
+        <h3 class="darkerGreen bold">Our Story</h3>
         <hr>
         <p class="bold grey-text text-darken-2">
             <%- include('../content/our_story'); %> 
         </p>
         <div class="moreContent">
-            <p class="bold grey-text text-darken-2">
+            <p class="grey-text text-darken-2">
                 <%- include('../content/our_story_more'); %> 
             </p>
         </div>
