--- a/views/includes/aboutus_sections/palla.ejs
+++ b/views/includes/aboutus_sections/palla.ejs
@@ -1,6 +1,7 @@
 <div class="palla">
     <div class="container">
-        <h4 class="primaryGreen bold">Palla Sportswear</h4>
+        <h3 class="darkerGreen bold">Palla Sportswear</h3>
+        <hr>
         <div class="image">
             <img class="pallalogo" src="/images/icons/palla.png">
         </div>
