--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -1,6 +1,6 @@
 <div class="technology">
     <div class="container">
-        <h4 class="primaryGreen bold">Technology</h4>
+        <h3 class="darkerGreen bold">Technology</h3>
         <hr>
          <p>
             <%- include('../content/technology'); %>
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row phone">
                 <div class="phoneImage col s12 m6">
-                    <img class="phone1" src="/images/phones/phone1.png">
+                    <img class="phone1" src="/images/phones/group1.png">
                 </div>
                 <ul class="col s12 m6">
                     <li>
@@ -32,7 +32,7 @@
     </div>
     <div class="outergrey">
         <div class="container">
-            <div class="row phone" dir="rtl">
+            <div class="row phone">
                 <ul class="col s12 m6">
                     <li>
                         Ongoing data driven assesments 
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <div class="phoneImage2 col s12 m6">
-                    <img class="phone2" src="/images/phones/phone2.png">
+                    <img class="phone2" src="/images/phones/group2.png">
                 </div>
             </div>
         </div>
