--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -3,7 +3,7 @@
         <div class="row">
             <div class="col s12 l6 content">
                 <h3>Franchise <span>Oppurtunities</span></h3>
-                <p>
+                <p class="grey-text text-darken-2">
                     Do you want to... 
                     <br><br>
                     -Make a difference AND own a succeseful business?<br>
