--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -2,6 +2,7 @@
     <div class="nav-wrapper green darken-3">
         <ul class="main center hide-on-small-only">
             <div class="first">
+                <li><a href="/">Home</a></li>
                 <li><a href="/leagues">Leagues</a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
@@ -17,6 +18,7 @@
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
+    <li><a href="/" class="green-text text-darken-3">Home</a></li>
     <li><a href="/leagues" class="green-text text-darken-3">Leagues</a></li>
     <li><a href="/franchise" class="green-text text-darken-3">Franchise</a></li>
     <li><a href="/joinUs" class="green-text text-darken-3">Join</a></li>
