--- a/views/includes/homepage_sections/fullWidthImage.ejs
+++ b/views/includes/homepage_sections/fullWidthImage.ejs
@@ -1,7 +1,7 @@
 <div class="fullImage responsive-img">
     <div class="container">
-        <h1 class="center-align white-text">Grassroots Developement League</h1>
-        <p class="center-align flow-text white-text">Soccer starts here!!!</p>
+        <h1 class="center-align white-text">Grassroots Development League</h1>
+        <p class="center-align flow-text white-text">Soccer starts here!</p>
         <a class="btn-large waves-effect waves-green">Join Us</a>
     </div>
 </div>
