--- a/views/includes/homepage_sections/partners.ejs
+++ b/views/includes/homepage_sections/partners.ejs
@@ -4,11 +4,11 @@
         <div class="row">
             <div class="col s12 l6 partner-container">
                 <img class="partners-logo" src="/images/leagues/tapin.png">
-                <a href="https://tapinmobilesolutions.com/" class="btn">Visit Tapin Site</a>
+                <a href="https://tapinmobilesolutions.com/" class="btn tapinBtn">Visit Tapin Site</a>
             </div>
             <div class="col s12 l6 partner-container">
                 <img class="partners-logo" src="/images/icons/palla.png">
-                <a href="https://www.pallasport.com/" class="btn">Visit Palla Site</a>
+                <a href="https://www.pallasport.com/" class="btn tapinBtn">Visit Palla Site</a>
             </div>
         </div>
     </div>
