--- a/views/includes/homepage_sections/whatWeDo.ejs
+++ b/views/includes/homepage_sections/whatWeDo.ejs
@@ -3,22 +3,22 @@
         <h3 class="center-align typicalTitle">What We Do</h3>
         <div class="row">
             <%- include('../minis/whatWeDoCard', {
-                title: "Development",
-                image: "soccer.png",
-                text: "Best in class mobile app",
-                color: "lighten-2"
-            }); %> 
-            <%- include('../minis/whatWeDoCard', {
                 title: "Technology",
                 image: "technology.png",
-                text: "Bes tin class mobile app",
-                color: ""
+                text: "Player, Coach, and Parent Education Driven",
+                num: "one"
+            }); %> 
+            <%- include('../minis/whatWeDoCard', {
+                title: "Development",
+                image: "soccer.png",
+                text: "Unique, Best in Class Technology Platform",
+                num: "two"
             }); %> 
             <%- include('../minis/whatWeDoCard', {
                 title: "Social Good",
                 image: "socialgood.png",
-                text: "Impact lives in the nation we serve",
-                color: "darken-2"
+                text: "Impacting Young Lives Throughout the World",
+                num: "three"
             }); %> 
         </div>
     </div>
