--- a/views/includes/joinus_sections/contactBox.ejs
+++ b/views/includes/joinus_sections/contactBox.ejs
@@ -12,7 +12,7 @@
                             Don't see your state logo?
                             <br>
                             <br>
-                            Let us know you are interested in starting, or registering for, a league
+                            <a href="#">Let us know</a> you are interested in starting, or registering for, a league
                             near you. Thanks and we look forward to seeing you back out on the field!
                         </p>
                     </div>
