--- a/views/includes/joinus_sections/howToJoin.ejs
+++ b/views/includes/joinus_sections/howToJoin.ejs
@@ -2,15 +2,8 @@
     <h3 class="bold">How to Join?</h3>
     <hr>
     <p class="info">
-        The GDP is open to all U7 and U8 Players/Teams! Whether you are a Club with 10 Teams seeking a diverse
-        and, developent focused environment to compliment your Training Groups, a Town Organization looking to
-        provide supplemental oppurtunites for your motivated intramural players, an individual Coach with a group 
-        of age apropiate young athletes who want something fun, engaging and educational to enhance their 
-        connection to the game, or simply a Player with limited options who wants to connect with a group and
-        participate in the Program, the GDP is for you!
+        Programs beginning in Spring 2021
         <br><br>
-        Joining the program is as simple as downloading the Tapin Mobile Solutions application and creating 
-        your team on the platform! Links will be sent to individual families to complete payment/registration 
-        and you are ready to play. 
+        Please click on your state below for more information on the league near you
     </p>
 </div>
