--- a/views/includes/joinus_sections/included.ejs
+++ b/views/includes/joinus_sections/included.ejs
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinRed">
-                7 Event Schedule, Including Fields and Referees
+                Full Event Schedule
             </div>
         </div>
         <div class="col s12 l4">
@@ -19,17 +19,17 @@
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Palla Soccer Ball
+                Palla Sports Product
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Palla Shin Gaurds
+                Developmental Feedback
             </div>
         </div>
         <div class="col s12 l4">
             <div class="include valign-wrapper tapinYellow">
-                Uniqe Digital Player Card with Developement Focused Feedback and Statistics
+                Digital Player Card
             </div>
         </div>
         <div class="col s12 l4">
