--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -1,6 +1,7 @@
 <div class="types">
-    <div class="container">
-        <h3 class="typicalTitle">Who's it For?</h3>
+    <div class="container joinUsInfo">
+        <h3 class="bold">Who's it For?</h3>
+        <hr>
         <table class="typesTable" style="table-layout: fixed;"> 
             <tr class="headers">
                 <td class="grey lighten-1">Club</td>
@@ -14,13 +15,13 @@
                     <img src="/images/icons/club.png">
                 </td>
                 <td>
-                    <img src="/images/icons/rec.png" class="rec">
+                    <img src="/images/icons/rec.png">
                 </td>
                 <td>
-                    <img src="/images/icons/team.png">
+                    <img src="/images/icons/team.png" class="team">
                 </td>
                 <td>
-                    <img src="/images/icons/player.png">
+                    <img src="/images/icons/soccerguy.png">
                 </td>
                 <td>
                     <img src="/images/icons/referee.png">
