--- a/views/includes/minis/whatWeDoCard.ejs
+++ b/views/includes/minis/whatWeDoCard.ejs
@@ -1,9 +1,10 @@
 <div class="col s12 l4">
-    <div class="card green <%= color %>">
+    <div class="card" id="<%= num %>">
         <div class="card-content">
             <img class="whatWeDo-logo" src="images/icons/<%= image %>">
-            <span class="card-title white-text"><%= title %></span>
+            <span class="card-title white-text" style="font-weight: bold;"><%= title %></span>
             <p class="white-text  center-align"><%= text %></p>
         </div>
     </div>
 </div>
+
