--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -1,31 +1,31 @@
 <div class="ourTeam">
     <div class="container">
-        <h4 class="primaryGreen bold">Our Team</h4>
+        <p class="darkerGreen bold">Our Team</p>
         <div class="row">
             <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/steve.png">
-                <p class="name bold">Steve Schecter</p>
-                <p class="title green-text darken-1">Co-Founder</p>
+                <p class="name bold grey-text text-darken-2">Steve Schecter</p>
+                <p class="title primaryGreen">Co-Founder</p>
                 <p class="subtitle grey-text">Founder of TapIn, ExchangeBlvd</p>
-                <p class="description">
+                <p class="description text-darken-3">
                     <%- include('../content/steveDescription'); %>
                 </p>
             </div>
             <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/craig.png">
-                <p class="name bold">Craig Porter</p>
-                <p class="title green-text darken-1">Co-Founder</p>
+                <p class="name bold grey-text text-darken-2">Craig Porter</p>
+                <p class="title primaryGreen">Co-Founder</p>
                 <p class="subtitle grey-text">Product Strategy of TapIn</p>
-                <p class="description">
+                <p class="description text-darken-3">
                     <%- include('../content/craigDescription'); %>
                 </p>
             </div>
             <div class="person col s12 l4">
                 <img class="leaguesLogo" src="/images/Headshots/JC.png">
-                <p class="name bold">Justin Capell</p>
-                <p class="title green-text darken-1">Co-Founder</p>
+                <p class="name bold grey-text text-darken-2">Justin Capell</p>
+                <p class="title primaryGreen">Co-Founder</p>
                 <p class="subtitle grey-text">former COO of GPS</p>
-                <p class="description">
+                <p class="description grey-text text-darken-3">
                     <%- include('../content/justinDescription'); %>
                 </p>
             </div>
