--- a/views/includes/aboutus_sections/playerCard.ejs
+++ b/views/includes/aboutus_sections/playerCard.ejs
@@ -1,6 +1,6 @@
 <div class="playerCards">
     <div class="container">
-        <h4 class="primaryGreen bold">Player Cards</h4>
+        <p class="darkerGreen bold">Player Card</p>
         <div class="row">
             <div class="col s12 l4 cardContainer">
                 <div class="image">
