--- a/views/includes/aboutus_sections/socialGood.ejs
+++ b/views/includes/aboutus_sections/socialGood.ejs
@@ -1,12 +1,12 @@
 <div class="socialGood">
     <div class="container">
-        <h4 class="primaryGreen bold">Social Good</h4>
+        <h3 class="darkerGreen bold">Social Good</h3>
         <hr>
         <p class="bold grey-text text-darken-2">
         <%- include('../content/social_good'); %>
         </p>
         <div class="moreContent">
-            <p class="bold grey-text text-darken-2">
+            <p class="grey-text text-darken-2">
                 <%- include('../content/social_good_more'); %>
             </p>
         </div>
