--- a/views/includes/aboutus_sections/tapinLeagues.ejs
+++ b/views/includes/aboutus_sections/tapinLeagues.ejs
@@ -1,6 +1,6 @@
 <div class="tapinLeagues">
     <div class="container">
-        <h4 class="primaryGreen bold">TapIn Leagues</h4>
+        <p class="darkerGreen bold">TapIn Leagues</p>
         <div class="row">
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/tapinlogo1.png">
