--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -1,7 +1,6 @@
 <div class="container joinUsInfo">
-    <h3>Contact Form</h3>
-    <hr>
-    <div class="row">
+    <h3>I'm interested...</h3>
+    <div class="row contactForm">
         <form class="col s12" action="https://formspree.io/xoqklebg" method="POST">
           <div class="row">
             <div class="input-field col s6">
