--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -4,9 +4,9 @@
 
         <div class="row">
             <%- include('../minis/testimonial', {
-                img: "test1",
-                name: "Mark McDevitt",
-                title: "Harvard Women’s Soccer, US Soccer National Grassroots Coaching Course Instructor",
+                img: "steve",
+                name: "Steve Schecter",
+                title: "Placeholder Title",
             }); %> 
             <%- include('../minis/testimonial', {
                 img: "test2",
@@ -14,9 +14,9 @@
                 title: "Head of Intermediate Academy - Rangers F.C.",
             }); %> 
             <%- include('../minis/testimonial', {
-                img: "test3",
-                name: "Luke Rothero",
-                title: "Harvard Women’s Soccer, US Soccer National Grassroots Coaching Course Instructor",
+                img: "JC",
+                name: "Justin Capell",
+                title: "Placeholder Title",
             }); %> 
         </div>
 
