fixed image error

--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="row phone">
                 <div class="phoneImage col s12 m6">
-                    <img class="phone1" src="/images/phones/group1.png">
+                    <img class="phone1" src="/images/phones/Group1.png">
                 </div>
                 <ul class="col s12 m6">
                     <li>
@@ -47,7 +47,7 @@
                     </li>
                 </ul>
                 <div class="phoneImage2 col s12 m6">
-                    <img class="phone2" src="/images/phones/group2.png">
+                    <img class="phone2" src="/images/phones/Group2.png">
                 </div>
             </div>
         </div>
