--- a/views/includes/aboutus_sections/ourTeam.ejs
+++ b/views/includes/aboutus_sections/ourTeam.ejs
@@ -30,5 +30,25 @@
                 </p>
             </div>
         </div>
+        <div class="row">
+            <div class="person col s12 l6">
+                <img class="leaguesLogo" src="/images/Headshots/pedro.png">
+                <p class="name bold grey-text text-darken-2">Pedro Herivaux</p>
+                <p class="title primaryGreen">Co-Founder</p>
+                <p class="subtitle grey-text">Founder of TapIn</p>
+                <p class="description text-darken-3">
+                    <%- include('../content/pedroDescription'); %>
+                </p>
+            </div>
+            <div class="person col s12 l6">
+                <img class="leaguesLogo" src="/images/Headshots/steveP.png">
+                <p class="name bold grey-text text-darken-2">Steve Prince</p>
+                <p class="title primaryGreen">Co-Founder</p>
+                <p class="subtitle grey-text">Founder of TapIn</p>
+                <p class="description text-darken-3">
+                    <%- include('../content/stevePDescription'); %>
+                </p>
+            </div>
+        </div>
     </div>
 </div>
