--- a/views/includes/aboutus_sections/sponsor.ejs
+++ b/views/includes/aboutus_sections/sponsor.ejs
@@ -9,7 +9,7 @@
                 <p>
                     <%- include('../content/sponsor'); %>
                 </p>
-                <a class="btn waves-effect waves-green tapinBtn">Visit Sponsorship Site</a>
+                <a href="https://tapinmobilesolutions.com" class="btn waves-effect waves-green tapinBtn">Visit Sponsorship Site</a>
             </div>
         </div>
     </div>
