--- a/views/includes/aboutus_sections/technology.ejs
+++ b/views/includes/aboutus_sections/technology.ejs
@@ -19,7 +19,7 @@
                     <li>
                         Curriculum & Coach licensing 
                         <br>
-                        <span class="grey-text text-darken-1">Age and develpoment appropriate</span>
+                        <span class="grey-text text-darken-1">Age and development appropriate</span>
                     </li>
                     <li>
                         Full communication & scheduling tools
