--- a/views/includes/content/leagues_header.ejs
+++ b/views/includes/content/leagues_header.ejs
@@ -1,3 +1,3 @@
-The mission of the Grassroots Developement League (GDL) begins programming in four states in Spring 2021.
+The Grassroots Development League (GDL) begins programming in four states in Spring 2021.
 Operating in Massachusetts, New Hampshire, Maine, and Rhode Island, the GDL is creating supplemental
-development oppurtunities for young players throughout New England as the revolutionary concept is launched!
+development opportunities for young players throughout New England as the revolutionary concept is launched!
