--- a/views/includes/content/our_story.ejs
+++ b/views/includes/content/our_story.ejs
@@ -1,5 +1,5 @@
 The Grassroots Development League (GDL) was created to provide a developmentally appropriate 
-oppurtunity for motivated young soccer players prior to their transition into a more formal and 
+opportunity for motivated young soccer players prior to their transition into a more formal and 
 structured environment. 
 <br>
 <br>
