--- a/views/includes/franchise_sections/header.ejs
+++ b/views/includes/franchise_sections/header.ejs
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col s12 l6 content">
-                <h3>Franchise <span>Oppurtunities</span></h3>
+                <h3>Franchise <span>Opportunities</span></h3>
                 <p class="grey-text text-darken-2">
                     Do you want to... 
                     <br><br>
