--- a/views/includes/general/contactUs.ejs
+++ b/views/includes/general/contactUs.ejs
@@ -2,10 +2,10 @@
     <div class="container">
         <h4 class="center-align white-text typicalTitle" style="margin: 0;">Contact Us</h4>
         <div class="social">
-            <img class="social-icon" id="1" src="/images/social/email.png">
-            <img class="social-icon" src="/images/social/facebook.png">
-            <img class="social-icon" src="/images/social/twitter.png">
-            <img class="social-icon" src="/images/social/instagram.png">
+            <a href="/joinus#contactform"><img class="social-icon" id="1" src="/images/social/email.png"></a>
+            <a><img class="social-icon" src="/images/social/facebook.png"></a>
+            <a><img class="social-icon" src="/images/social/twitter.png"></a>
+            <a href="https://www.instagram.com/gdlsoccer/"><img class="social-icon" src="/images/social/instagram.png"></a>
         </div>
     </div>
 </div>
