--- a/views/includes/general/navbar.ejs
+++ b/views/includes/general/navbar.ejs
@@ -1,9 +1,9 @@
 <nav>
-    <div class="nav-wrapper green darken-3">
+    <div class="nav-wrapper">
         <ul class="main center hide-on-small-only">
             <div class="first">
                 <li><a href="/">Home</a></li>
-                <li><a href="/leagues">Leagues</a></li>
+                <li><a href="/leagues">Programs</a></li>
                 <li><a href="/franchise">Franchise</a></li>
             </div>
             <a href="/" class="no-hover"><img class="logo" src="/images/leagues/logo-draft.png"></a>
@@ -19,7 +19,7 @@
 
 <ul class="sidenav" id="mobile-demo">
     <li><a href="/" class="green-text text-darken-3">Home</a></li>
-    <li><a href="/leagues" class="green-text text-darken-3">Leagues</a></li>
+    <li><a href="/leagues" class="green-text text-darken-3">Programs</a></li>
     <li><a href="/franchise" class="green-text text-darken-3">Franchise</a></li>
     <li><a href="/joinUs" class="green-text text-darken-3">Join</a></li>
     <li><a href="/aboutus" class="green-text text-darken-3">About Us</a></li>
