--- a/views/includes/homepage_sections/news.ejs
+++ b/views/includes/homepage_sections/news.ejs
@@ -3,7 +3,7 @@
         <h3 class="center-align typicalTitle">News</h3>
         <div class="row">
             <a href="/news#story1">
-                <div class="col s12 m6 l4">
+                <div class="col s12 m6">
                     <div class="news-card hoverable">
                         <div class="league green darken-3 white-text">
                             GDL MA
@@ -13,22 +13,12 @@
                 </div>  
             </a>
             <a href="/news#story2">
-                <div class="col s12 m6 l4">
+                <div class="col s12 m6">
                     <div class="news-card hoverable">
                         <div class="league pink white-text">
                             GDL NH
                         </div>
                         <p class="title white-text bold">Palla Partnership</p>
-                    </div>
-                </div>  
-            </a>
-            <a href="/news#story3">
-                <div class="col s12 l4">
-                    <div class="news-card hoverable">
-                        <div class="league orange white-text">
-                            GDL NH
-                        </div>
-                        <p class="title white-text bold">2020 Launch in New England</p>
                     </div>
                 </div>  
             </a>
