--- a/views/includes/homepage_sections/ourProgram.ejs
+++ b/views/includes/homepage_sections/ourProgram.ejs
@@ -21,7 +21,7 @@
                 info: "Fun, Engaging, Safe, and Educational"
             }); %>
             <%- include('../minis/ourProgramCard', {
-                title: "Developement Focused",
+                title: "Development Focused",
                 image: "computerguy",
                 info: "Built by Experienced Soccer Leaders/Educators"
             }); %>
