--- a/views/includes/homepage_sections/testimonials.ejs
+++ b/views/includes/homepage_sections/testimonials.ejs
@@ -1,22 +1,17 @@
 <div class="testimonials grey lighten-2">
     <div class="container">
-        <h3 class="center-align typicalTitle">What They Said</h3> 
+        <h3 class="center-align typicalTitle">What the Experts are Saying</h3> 
 
         <div class="row">
             <%- include('../minis/testimonial', {
-                img: "steve",
-                name: "Steve Schecter",
-                title: "Placeholder Title",
+                img: "tomasso",
+                name: "Tomasso Trevisan",
+                title: "NE Surf Soccer Club",
             }); %> 
             <%- include('../minis/testimonial', {
-                img: "test2",
+                img: "markspalding",
                 name: "Mark Spalding",
                 title: "Head of Intermediate Academy - Rangers F.C.",
-            }); %> 
-            <%- include('../minis/testimonial', {
-                img: "JC",
-                name: "Justin Capell",
-                title: "Placeholder Title",
             }); %> 
         </div>
 
