--- a/views/includes/joinus_sections/contactForm.ejs
+++ b/views/includes/joinus_sections/contactForm.ejs
@@ -1,3 +1,4 @@
+<a name="contactform">
 <div class="container joinUsInfo">
     <h3>I'm interested...</h3>
     <div class="row contactForm">
@@ -116,3 +117,4 @@
         </form>
     </div>
 </div>
+</a>
