--- a/views/includes/joinus_sections/types.ejs
+++ b/views/includes/joinus_sections/types.ejs
@@ -32,7 +32,7 @@
                     <p>Add value and diversity to all your U7 and U8 programming!</p>
                 </td>
                 <td class="grey lighten-4">
-                    <p>Provide supplemental development oppurtunities for your U7 and U8 players!</p>
+                    <p>Provide supplemental development opportunities for your U7 and U8 players!</p>
                 </td>
                 <td class="grey lighten-4">
                     <p>Enhance the U7 and U8 training</p>
