--- a/views/includes/leagues_sections/info.ejs
+++ b/views/includes/leagues_sections/info.ejs
@@ -1,10 +1,9 @@
 <div class="info">
     <div class="container">
-        <table>
+        <table class="reg">
             <tr>
                 <td class="tapinRed">
                     <p class="bold">Format</p>
-                    <i class="material-icons">file_download</i>
                 </td>
                 <td class="tapinRed lighter">
                     <ul>
@@ -18,7 +17,6 @@
             <tr>
                 <td class="tapinYellow">
                     <p class="bold">Rules</p>  
-                    <i class="material-icons">file_download</i>
                 </td>
                 <td class="tapinYellow lighter">
                     <ul>
@@ -32,7 +30,6 @@
             <tr>
                 <td class="tapinBlue">
                     <p class="bold">Reccomendations</p>
-                    <i class="material-icons">file_download</i>
                 </td>
                 <td class="tapinBlue lighter">
                     <ul>
@@ -44,11 +41,10 @@
                 </td>
             </tr>
         </table>
-        <table class="mobile" style="display: none;">
+        <table class="mobile">
             <tr>
                 <td class="tapinRed">
                     <p class="bold">Format</p>
-                    <i class="material-icons">file_download</i>
                 </td>
             </tr>
             <tr>
@@ -64,7 +60,6 @@
             <tr>
                 <td class="tapinYellow">
                     <p class="bold">Rules</p>
-                    <i class="material-icons">file_download</i>
                 </td>
             </tr>
             <tr>
@@ -80,7 +75,6 @@
             <tr>
                 <td class="tapinBlue">
                     <p class="bold">Reccomendations</p>
-                    <i class="material-icons">file_download</i>
                 </td>
             </tr>
             <tr>
@@ -94,5 +88,10 @@
                 </td> 
             </tr>
         </table>
+
+        <div class="pdf valign-wrapper">
+            <a href="rules.pdf">League Rules Handbook</a>
+            <i class="material-icons">file_download</i>
+        </div>
     </div>
 </div>
