--- a/views/includes/leagues_sections/stickers.ejs
+++ b/views/includes/leagues_sections/stickers.ejs
@@ -3,9 +3,9 @@
         <h4 class="bold">Stickers</h4>
         <table style="table-layout: fixed;">
             <tr>
-                <td class="red">Hardest Worker</td>
-                <td class="grey">Best Student</td>
-                <td class="green">Best Sportsman</td>
+                <td class="red">Hard Worker</td>
+                <td class="grey">Great Student</td>
+                <td class="green">Good Sportsman</td>
                 <td class="blue">Great Play</td>
             </tr>
             <tr>
@@ -18,20 +18,20 @@
         <table class="mobile">
             <tr>
                 <td class="red">
-                    Hardest worker
+                    Hard worker
                 </td>
             </tr>
             <tr>
                 <td><img class="sticker" src="/images/stickers/heart.png"></td>
             </tr>
             <tr>
-                <td class="grey">Best Student</td>
+                <td class="grey">Great Student</td>
             </tr>
             <tr>
                 <td><img class="sticker" src="/images/stickers/gear.png"></td>
             </tr>
             <tr>
-                <td class="green">Best Sportsman</td>
+                <td class="green">Good Sportsman</td>
             </tr>
             <tr>
                 <td><img class="sticker" src="/images/stickers/handshake.png"></td>
