--- a/views/includes/minis/testimonial.ejs
+++ b/views/includes/minis/testimonial.ejs
@@ -1,4 +1,4 @@
-<div class="col l4 m12">
+<div class="col m12 l6">
     <div class="testimonial-card white z-depth-3" id="<%= img %>">
         <img class="pic" src="/images/Headshots/<%= img %>.png" id="<%= img %>">
         <p class="name bold"><%= name %></p>
@@ -9,15 +9,3 @@
         </div>
     </div>
 </div>
-
-
-
-<!-- <div class="imageContainer">
-    <div class="image <%= img %>"></div>
-</div>
-<div class="testimonial">
-    <p class="name bold"><%= name %></p>
-    <p class="title green-text text-darken-2"><%= title %></p>
-    <p class="content grey-text text-darken-2"><%- include('../content/testimonials/' + img); %></p>
-    <div class="stars"></div>
-</div> -->
