--- a/views/includes/aboutus_sections/download.ejs
+++ b/views/includes/aboutus_sections/download.ejs
@@ -5,13 +5,13 @@
             <div class="content">
                 <p class="title bold">Download TapIn League Management App</p>
                 <div class="app">
-                    <img src="/images/icons/tapin-icon.png" class="app-logo">
+                    <a href="https://apps.apple.com/us/app/tapin-league-management/id1474306154"><img src="/images/icons/tapin-icon.png" class="app-logo"></a>
                     <div class="words">
                         <p class="white-text bold">Tapin Mobile Solutions</p>
                         <div class="available">
                             <p class="white-text">Available on: </p>
-                            <img src="/images/icons/android.png" class="android">
-                            <img src="/images/icons/ios.png" class="ios">
+                            <a href="https://play.google.com/store/apps/details?id=com.tapin.league"><img src="/images/icons/android.png" class="android"></a>
+                            <a href="https://apps.apple.com/us/app/tapin-league-management/id1474306154"><img src="/images/icons/ios.png" class="ios"></a>
                         </div>
                     </div>                    
                 </div>
