--- a/views/includes/homepage_sections/ourLeagues.ejs
+++ b/views/includes/homepage_sections/ourLeagues.ejs
@@ -1,6 +1,6 @@
 <div class="ourLeagues <%= home ? ' grey lighten-4' : '' %>">
     <div class="container">
-        <h3 class="center-align typicalTitle">Our Leagues</h3>
+        <h3 class="center-align typicalTitle">Our Programs</h3>
         <div class="row">
             <div class="league col s12 m6 l3">
                 <img class="leaguesLogo" src="/images/leagues/logo-draft.png">
